--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem Data Barang & Kasir</title>
+    <title>Sistem Data Barang & Kasir Toko ADS</title>
     <link rel="stylesheet" href="style_ads.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
@@ -31,7 +31,7 @@
     <!-- WADAH UTAMA APLIKASI -->
     <div id="app-container" class="hidden">
         <header>
-            <h1>Sistem Data Barang & Kasir</h1>
+            <h1>Sistem Data Barang & Kasir Toko ADS</h1>
             <div class="header-info">
                 <span id="info-nama-kasir"></span>
                 <button id="btn-logout">Logout</button>
@@ -68,8 +68,8 @@
                         </div>
                         <div class="form-row">
                             <div class="form-group"><label for="Stok_Dasar">Stok (Pcs atau Kg)</label><input type="number" id="Stok_Dasar" name="Stok_Dasar" min="0" value="0" step="any" required></div>
-                            <div class="form-group"><label for="Konversi_Paket">Konversi per Paket</label><input type="number" id="Konversi_Paket" name="Konversi_Paket" min="0" value="0" step="any"></div>
-                            <div class="form-group"><label for="Konversi_Karton">Konversi per Karton/Sak</label><input type="number" id="Konversi_Karton" name="Konversi_Karton" min="0" value="0" step="any"></div>
+                            <div class="form-group"><label for="Konversi_Paket">Barang per Paket (Lusin, Pak)</label><input type="number" id="Konversi_Paket" name="Konversi_Paket" min="0" value="0" step="any"></div>
+                            <div class="form-group"><label for="Konversi_Karton">Barang per Karton/Sak</label><input type="number" id="Konversi_Karton" name="Konversi_Karton" min="0" value="0" step="any"></div>
                         </div>
                         <div class="form-row">
                             <div class="form-group"><label for="Harga_Dasar">Harga Dasar (Pcs atau Kg)</label><input type="number" id="Harga_Dasar" name="Harga_Dasar" min="0" value="0" step="any" required></div>
