--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="form-group password-wrapper">
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
-                <span class="toggle-password">👁️</span>
+                <button type="button" class="toggle-password" aria-label="Tampilkan atau sembunyikan password">👁️</button>
             </div>
             <button type="submit">Login</button>
             <div id="login-status"></div>
@@ -200,7 +200,7 @@
                             <div class="form-group password-wrapper">
                                 <label for="pengguna-password">Password (isi untuk pengguna baru / jika ingin diubah)</label>
                                 <input type="password" id="pengguna-password" name="Password_Baru">
-                                <span class="toggle-password">👁️</span>
+                                <button type="button" class="toggle-password" aria-label="Tampilkan atau sembunyikan password">👁️</button>
                             </div>
                             <div class="form-group">
                                 <label for="pengguna-role">Role</label>
