--- a/index.html
+++ b/index.html
@@ -235,6 +235,6 @@
         </main>
     </div>
 
-    <script src="script_ads.js"></script>
+    <script src="app.js" type="module"></script>
 </body>
 </html>
