--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Sistem Data Barang & Kasir Toko ADS</title>
     <link rel="stylesheet" href="style_ads.css">
     <!-- PERBAIKAN: Library crypto-js yang tidak digunakan telah dihapus -->
+     <!-- =============================================== -->
+    <!-- === TAMBAHKAN BARIS DI BAWAH INI UNTUK FAVICON === -->
+    <!-- =============================================== -->
+    <link rel="icon" type="image/png" href="icon.png"> 
+    <!-- Pastikan 'href' sesuai dengan nama file ikon Anda -->
 </head>
 <body>
 
