--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <!-- =============================================== -->
     <!-- === TAMBAHKAN BARIS DI BAWAH INI UNTUK FAVICON === -->
     <!-- =============================================== -->
-    <link rel="icon" type="image/png" href="icon.png"> 
+    <link rel="icon" type="image/png" href="Logo.png"> 
     <!-- Pastikan 'href' sesuai dengan nama file ikon Anda -->
 </head>
 <body>
