--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
             <div id="notifikasi" class="hidden"></div>
             <div id="area-struk" class="hidden">
                 <div id="struk-content"></div>
-                <div class="struk-actions">
+               <div class="struk-actions">
                     <button id="btn-cetak-struk">Cetak Struk</button>
-                    <button id="btn-transaksi-baru">Transaksi Baru</button>
+                    <!-- Ganti tombol ini -->
+                    <button id="btn-ubah-transaksi" style="background-color: #f39c12;">Ubah Transaksi</button>
                 </div>
             </div>
 
