--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
             <div id="notifikasi" class="hidden"></div>
             <div id="area-struk" class="hidden">
                 <div id="struk-content"></div>
+                <!-- === PERBAIKAN: Menambahkan tombol baru untuk WhatsApp === -->
                 <div class="struk-actions">
                     <button id="btn-cetak-struk">Cetak Struk</button>
+                    <button id="btn-kirim-whatsapp" style="background-color: #25D366;">Kirim WhatsApp</button>
                     <button id="btn-ubah-transaksi" style="background-color: #f39c12;">Ubah Transaksi</button>
-                    <!-- PERBAIKAN: Tombol Transaksi Baru yang lama dihapus dari sini -->
                 </div>
             </div>
 
@@ -107,7 +108,6 @@
                 <h2>Kasir Transaksi</h2>
                 <div class="kasir-grid">
                     <div class="kasir-kiri">
-                        <!-- === PERBAIKAN: Menambahkan div pembungkus dan tombol baru === -->
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
                             <h3>Keranjang Belanja</h3>
                             <button id="btn-transaksi-baru-kasir" style="background-color: #95a5a6;">Transaksi Baru</button>
