--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
                     <button id="btn-cetak-struk">Cetak Struk</button>
                     <button id="btn-kirim-whatsapp" style="background-color: #25D366;">Kirim WhatsApp</button>
                     <button id="btn-ubah-transaksi" style="background-color: #f39c12;">Ubah Transaksi</button>
+                    <!-- === TAMBAHKAN KEMBALI TOMBOL INI === -->
+                    <button id="btn-transaksi-baru" style="background-color: #95a5a6;">Transaksi Baru</button>
                 </div>
             </div>
 
