--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
         </nav>
     
         <main>
+            <!-- === PERBAIKAN: Wadah untuk Scanner Ditambahkan Di Sini === -->
+            <div id="scanner-container" class="hidden">
+                <div id="scanner-viewfinder"></div>
+                <button id="btn-close-scanner">Tutup</button>
+            </div>
+
             <div id="notifikasi" class="hidden"></div>
             <div id="area-struk" class="hidden">
                 <div id="struk-content"></div>
@@ -64,7 +70,15 @@
                     <form id="form-barang">
                         <input type="hidden" id="ID_Barang" name="ID_Barang">
                         <div class="form-row">
-                            <div class="form-group"><label for="Kode_Barang">Kode Barang</label><input type="text" id="Kode_Barang" name="Kode_Barang" required autocomplete="off"><div id="rekomendasi-kode" class="rekomendasi-container"></div></div>
+                            <!-- === PERBAIKAN: Tombol Scan Ditambahkan Di Sini === -->
+                            <div class="form-group">
+                                <label for="Kode_Barang">Kode Barang</label>
+                                <div class="input-grup">
+                                    <input type="text" id="Kode_Barang" name="Kode_Barang" required autocomplete="off">
+                                    <button type="button" id="btn-scan-manajemen" class="btn-scan">📷 Scan</button>
+                                </div>
+                                <div id="rekomendasi-kode" class="rekomendasi-container"></div>
+                            </div>
                             <div class="form-group"><label for="Nama_Barang">Nama Barang</label><input type="text" id="Nama_Barang" name="Nama_Barang" required></div>
                             <div class="form-group"><label for="Kategori_Barang">Kategori</label><input type="text" id="Kategori_Barang" name="Kategori_Barang"></div>
                         </div>
@@ -143,9 +157,13 @@
                     </div>
                     <div class="kasir-kanan">
                         <h3>Pilih Barang</h3>
+                        <!-- === PERBAIKAN: Tombol Scan Ditambahkan Di Sini === -->
                         <div class="form-group">
                             <label>1. Cari Barang</label>
-                            <input type="text" id="input-cari-barang" placeholder="Ketik kode atau nama barang..." autocomplete="off">
+                            <div class="input-grup">
+                                <input type="text" id="input-cari-barang" placeholder="Ketik kode atau nama barang..." autocomplete="off">
+                                <button type="button" id="btn-scan-kasir" class="btn-scan">📷 Scan</button>
+                            </div>
                             <div id="loading-cari" class="loading hidden"></div>
                             <div id="hasil-pencarian" class="rekomendasi-container"></div>
                         </div>
@@ -168,8 +186,6 @@
             <!-- TAMPILAN 3: LAPORAN PENJUALAN -->
             <section id="menu-laporan" class="hidden">
                 <h2>Laporan Penjualan</h2>
-
-                <!-- === PERBAIKAN: Form Filter Ditambahkan Di Sini === -->
                 <div class="form-container">
                     <div class="form-row">
                         <div class="form-group">
@@ -184,7 +200,6 @@
                             <label for="filter-kasir">Kasir</label>
                             <select id="filter-kasir">
                                 <option value="">Semua Kasir</option>
-                                <!-- Opsi kasir akan diisi oleh JavaScript -->
                             </select>
                         </div>
                         <div class="form-group">
@@ -201,7 +216,6 @@
                         <button id="btn-reset-filter" type="button" style="background-color: #95a5a6;">Reset Filter</button>
                     </div>
                 </div>
-
                 <div class="tabel-container">
                     <div id="loading-laporan" class="loading hidden"></div>
                     <table>
@@ -212,7 +226,6 @@
                                 <th>Kasir</th>
                                 <th>Detail Barang</th>
                                 <th>Total Belanja</th>
-                                <!-- === PERBAIKAN: Kolom Status Ditambahkan === -->
                                 <th>Status</th>
                             </tr>
                         </thead>
@@ -276,6 +289,7 @@
         </main>
     </div>
 
+    <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
     <script src="app.js" type="module"></script>
 </body>
 </html>
